CHROMIUM: drm/udl: Fixed problem with UDL adpater reconnection

Fixed problem with DisplayLink and DisplayLink certified adapers in
kernel v3.8 when adapter doesn't want to work if it was initialized
with disconnected DVI cable. Now udl driver checks and updates its
connection state every 10 seconds. Now UDL driver retreives all edid
data blocks instead of only base one. Previous approch could lead to
improper initialization of video mode with certain monitors.

BUG=chromium:712947,chromium:737842,chromium:765354
TEST=Boot Samus with connected DL165 adapter, but with disconnected
DVI cable. Connect DVI cable after system will start. DL165 adapter
should work.

Change-Id: I7eb6a4b43b97a8df2b37fd2c9739945b36ab3387
Signed-off-by: Robert Tarasov <tutankhamen@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/706105
Reviewed-by: Joe Kniss <djmk@google.com>
Reviewed-by: Stéphane Marchesin <marcheu@chromium.org>